--- a/lists.html
+++ b/lists.html
@@ -3,7 +3,13 @@
    <head>
          <title>lists</title>
          </head>
-         <body>
+         <style>
+            ol>li {
+                color: blue;
+            
+            }
+        </style>
+        <body>
             An ordered lists:
             <ol>
                 <li>first item</li>
